--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@clerk/backend": "^0.34.2",
     "@clerk/nextjs": "^4.27.1",
     "@headlessui/react": "^1.7.17",
+    "@radix-ui/react-checkbox": "^1.0.4",
     "@radix-ui/react-label": "^2.0.2",
     "@radix-ui/react-select": "^2.0.0",
     "@tailwindcss/forms": "^0.5.7",
