--- a/package.json
+++ b/package.json
@@ -17,10 +17,12 @@
     "@radix-ui/react-select": "^2.0.0",
     "@tailwindcss/forms": "^0.5.7",
     "apexcharts": "^3.44.0",
+    "aws4": "^1.12.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.292.0",
-    "mongoose": "^8.0.2",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.1.0",
     "react": "^18",
     "react-apexcharts": "^1.4.1",
     "react-dom": "^18",
